dhbw-displaydata/manifests/deploy/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dhbw-displaydata
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dhbw-displaydata
  template:
    metadata:
      labels:
        app: dhbw-displaydata
    spec:
      containers:
        - image: replace/me/displaydata
          imagePullPolicy: Always
          name: dhbw-displaydata
          livenessProbe:
            httpGet:
              path: /data
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
