dhbw-displaydata/manifests/deploy/k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dhbw-displaydata
    app.kubernetes.io/component: dhbw-displaydata
    app.kubernetes.io/instance: dhbw-displaydata
    app.kubernetes.io/part-of: dhbw-exercise-1
  name: dhbw-displaydata
spec:
  ports:
  - name: 3000-tcp
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: dhbw-displaydata
    deploymentconfig: dhbw-displaydata
  sessionAffinity: None
  type: ClusterIP
