dhbw-displaydata/manifests/deploy/k8s/ingress.yaml
# Ingress for GET request from external
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dhbw-displaydata
spec:
  rules:
    - host: dhbw-micro.info
      http:
        paths:
          - path: /data
            pathType: Prefix
            backend:
              service:
                name: dhbw-displaydata
                port:
                  number: 3000
